# uora

./: .eslintignore  .eslintrc  .gitignore  .npmrc  .prettierignore  .prettierrc  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.changeset/: config.json
.github/: renovate.json
.github/actions/pnpm/: action.yml
.github/actions/rustup/: action.yml
.github/workflows/: ci.yml  compressed-size.yml  coverage.yml  docs.yml  release.yml  reusable-build.yml
docs/: index.md  markdown-examples.md  package.json  tsconfig.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts
examples/: README.md
examples/basic/: aora.config.ts  index.html  package.json  tsconfig.json
examples/basic/src/pages/: index.tsx
playground/: index.html  package.json  tsconfig.json  types.d.ts  uora.config.ts
playground/src/: entry.client.tsx  entry.server.tsx  index.tsx
playground/src/pages/: index.tsx
scripts/: package.json  tsconfig.json
scripts/cmd/: bootstrap.ts  build.ts  clean.ts  format.ts  prebundle.ts
scripts/internal/: constants.ts  utils.ts
tests/: tsconfig.json
