[workspace]
members  = ["packages/swc/crates/*"]
resolver = "2"                       # See https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2

[workspace.dependencies]
# Workspace crates
napi        = { version = ">=2.14.2" }
napi-build  = { version = ">=2.1.0" }
napi-derive = { version = ">=2.14.6" }
napi-sys    = { version = ">=2.3.0" }

# SWC crates
# Keep consistent with preset_env_base through swc_core
swc_core = { version = ">=0.87.19" }

[profile.dev]
debug       = 2
incremental = true

[profile.release]
codegen-units = 1
debug         = false
lto           = false # disabled by now, because it will significantly increase our compile time.
opt-level     = 3
strip         = true
